tests/diagnostics/variables/references/unknown_name/expect.txt
# exit: 1
input/main.lang0:2:12: error: unknown name 'x'
      return x
             ^
